--- a/src/app/gestion/sector-management/sector-card/sector-card.component.html
+++ b/src/app/gestion/sector-management/sector-card/sector-card.component.html
@@ -38,9 +38,24 @@
 </ng-template>
 
 
-<clr-modal [(clrModalOpen)]="openedDialog" [clrModalSize]="'sm'">
+<clr-modal [(clrModalOpen)]="openedDialog" [clrModalSize]="'md'">
+    
     <h3 class="modal-title">Borrar Sector</h3>
     <div class="modal-body">
+        
+        <div class="alert alert-danger" role="alert" *ngIf="deleteError">
+            <div class="alert-items">
+                <div class="alert-item static">
+                    <div class="alert-icon-wrapper">
+                        <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
+                    </div>
+                    <span class="alert-text">
+                        Sector con Lotes. Error al Borrar.
+                    </span>
+                </div>
+            </div>
+        </div>
+        
         <p>¿ Borrar <strong>{{ selectedSector?.nombre }}</strong> ?</p>
         
     </div>
