envio produccion hoy. Pendiente revisar trazabilidad completa

--- a/src/app/trazabilidad/trazabilidad-sector-management/sector-all/sector-all.component.html
+++ b/src/app/trazabilidad/trazabilidad-sector-management/sector-all/sector-all.component.html
@@ -300,7 +300,7 @@
 
 
 <!-- Error Modal Dialog -->
-<clr-modal [(clrModalOpen)]="openedErrorMessageDialog" [clrModalSize]="'sm'">
+<clr-modal [(clrModalOpen)]="openedErrorMessageDialog" [clrModalSize]="'md'">
   <h3 class="modal-title">Mensaje</h3>
   <div class="modal-body">
 
