Areglado InsertarVariedad en Lote y al Editar Lote

--- a/src/app/gestion/lotes-management/lote-form-mng/lote-form-mng.component.html
+++ b/src/app/gestion/lotes-management/lote-form-mng/lote-form-mng.component.html
@@ -215,8 +215,9 @@
                 <clr-control-error>Introduzca la Variedad</clr-control-error>
 
             </clr-input-container>
-            
+            {{ variedadForm.value | json }}
         </form>
+       
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-outline" (click)="onCancelNuevaVariedad()">Cancelar</button>
