--- a/src/app/gestion/abonos-management/abono-list/abono-list.component.html
+++ b/src/app/gestion/abonos-management/abono-list/abono-list.component.html
@@ -1,4 +1,6 @@
 
+
+
 <div *ngIf="emptyAbonos; then thenAbonoBlock else elseAbonoBlock"></div>
 <ng-template #thenAbonoBlock>
 
@@ -21,40 +23,86 @@
 <ng-template #elseAbonoBlock>
 
   <div class="clr-row clr-justify-content-center">
+        <div class="clr-col-12 clr-col-md-9 clr-col-lg-6 clr-col-xl-6">
+            <clr-radio-container clrInline class="mt-0">
+                <label>Filtrar Abonos</label>
+                <clr-radio-wrapper>
+                    <input type="radio" clrRadio name="filterAbono" required value="ALL" [(ngModel)]="filterAbonos" 
+                        (change)="onFilterChange('ALL')" />
+                    <label>Todos</label>
+                </clr-radio-wrapper>
+                <clr-radio-wrapper>
+                    <input type="radio" clrRadio name="filterAbono" required value="INSTOCK" [(ngModel)]="filterAbonos" 
+                        (change)="onFilterChange('INSTOCK')" />
+                    <label>En Stock</label>
+                </clr-radio-wrapper>
+            </clr-radio-container>
+        </div>
+        <div class="clr-col-12 clr-col-md-9 clr-col-lg-6 clr-col-xl-6" 
+            *ngIf="filterAbonos === 'ALL'">
+            
+            <button class="btn btn-sm mr-1" 
+                *ngFor="let letter of letters" 
+                (click)="onButtonClick(letter)" 
+                [ngClass]="{'btn-primary': selectedLetter === letter }">{{letter}}</button>
+        </div>
+  </div>  
+  <div class="clr-row clr-justify-content-center">
     <div class="clr-col-12 clr-col-md-9 clr-col-lg-6 clr-col-xl-6">
 
-        <clr-datagrid>
-            <clr-dg-column>Nombre</clr-dg-column>
-            <clr-dg-column>S&iacute;mbolo</clr-dg-column>
-            <clr-dg-column>Composici&oacute;n</clr-dg-column>
-            <clr-dg-column>Otros</clr-dg-column>
-            <clr-dg-column></clr-dg-column>
+
+        <div *ngIf="loading; then loadingBlock else dataGridAbonosBlock"></div>
+        <ng-template #loadingBlock>
+                <div class="spinner-wrapper">
+                    <span class="spinner">
+                        Cargando...
+                    </span>
+                    <span>
+                        Cargando...
+                    </span>
+                </div>
+        </ng-template>
         
-            <clr-dg-row *clrDgItems="let abono of abonoList">
-                <clr-dg-cell >
-                    <strong>{{ abono.nombre }}</strong>
-                </clr-dg-cell>
-                <clr-dg-cell >
-                    <strong>({{ abono.simbolo }})</strong>
-                </clr-dg-cell>
-                <clr-dg-cell >
-                    {{ abono.composicion }}
-                </clr-dg-cell>
-                <clr-dg-cell>
-                    {{ abono.otros }}
-                </clr-dg-cell>
-                <clr-dg-cell>
-                    <button class="btn btn-icon btn-sm" (click)="onEditAbono()" routerLink="/gestion/abono/{{abono.id}}/edit">
-                        <clr-icon shape="note"></clr-icon>
-                    </button>
-                    <button class="btn btn-icon btn-sm">
-                        <clr-icon shape="trash" (click)="onDeleteAbono(abono)"></clr-icon>
-                    </button>
-                </clr-dg-cell>
-            </clr-dg-row>
-        
-            <clr-dg-footer>{{abonoList.length}} Abonos</clr-dg-footer>
-        </clr-datagrid>
+        <ng-template #dataGridAbonosBlock>
+            <clr-datagrid>
+                <clr-dg-column>Nombre</clr-dg-column>
+                <clr-dg-column>Composici&oacute;n</clr-dg-column>
+                <clr-dg-column>En Stock</clr-dg-column>
+                <clr-dg-column>Otros</clr-dg-column>
+                <clr-dg-column></clr-dg-column>
+            
+                <clr-dg-row *clrDgItems="let abono of abonoList">
+                    <clr-dg-cell >
+                        <strong>{{ abono.nombre }}</strong>
+                    </clr-dg-cell>
+                    <clr-dg-cell >
+                        {{ abono.composicion }}
+                    </clr-dg-cell>
+                    <clr-dg-cell>
+                        <clr-checkbox-container clrInline>
+                            <clr-checkbox-wrapper>
+                                <input type="checkbox" clrCheckbox name="options" value="" [checked]="abono.enStock" disabled />
+                                <label>Stock</label>
+                            </clr-checkbox-wrapper>
+                        </clr-checkbox-container>
+                    </clr-dg-cell>
+                    <clr-dg-cell>
+                        {{ abono.otros }}
+                    </clr-dg-cell>
+                    <clr-dg-cell>
+                        <button class="btn btn-icon btn-sm" (click)="onEditAbono()" routerLink="/gestion/abono/{{abono.id}}/edit">
+                            <clr-icon shape="note"></clr-icon>
+                        </button>
+                        <button class="btn btn-icon btn-sm">
+                            <clr-icon shape="trash" (click)="onDeleteAbono(abono)"></clr-icon>
+                        </button>
+                    </clr-dg-cell>
+                </clr-dg-row>
+            
+                <clr-dg-footer>{{abonoList.length}} Abonos</clr-dg-footer>
+            </clr-datagrid>
+        </ng-template>
+            
 
 
     </div>
@@ -64,7 +112,7 @@
 <clr-modal [(clrModalOpen)]="openedAbonoDialog" [clrModalSize]="'sm'">
     <h3 class="modal-title">Borrar Abono</h3>
     <div class="modal-body">
-        <p>¿ Borrar <strong>{{ selectedAbono?.nombre }} ({{ selectedAbono?.simbolo }})</strong> ?</p>
+        <p>¿ Borrar <strong>{{ selectedAbono?.nombre }} </strong> ?</p>
         
     </div>
     <div class="modal-footer">
